<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToDoX</string>
    <string name="tasks_list">Tasks List</string>
    <string name="tasks_schedule">Tasks Schedule</string>
    <string name="home">Home</string>
    <string name="empty" />
    <string name="transition_bab">transition bab</string>
    <string name="transition_fab">transition_fab</string>
    <string name="search">Search</string>
    <string name="more_options">More options</string>
    <string name="tasks">Tasks</string>
    <string name="schedule">Schedule</string>
    <string name="cancel">Cancel</string>
    <string name="completed_with_amount">%1$d Completed</string>
    <string name="not_yet_with_amount">%1$d Not yet</string>
    <string name="new_task">New Task</string>
    <string name="task_of">task</string>
    <string name="calendar">Calendar</string>
    <string name="dash_separator">-</string>
    <string name="today">Today</string>
    <string name="in_schedule">In Schedule</string>
    <string name="my_tasks">My Tasks</string>
    <string name="about">About</string>
    <string name="dark_mode">Dark mode</string>
    <string name="user_interface">User Interface</string>
    <string name="fonts">Fonts</string>
    <string name="poppins">Poppins</string>
    <string name="poppins_url">https://fonts.google.com/specimen/Poppins</string>
    <string name="icons">Icons</string>
    <string name="material_design_icons_url">https://materialdesignicons.com/</string>
    <string name="material_design_icons">Material Design Icons</string>
    <string name="about_description_1">It\'s just another app for fun, but you can use it to organize your todos xD</string>
    <string name="about_description_2">You can find us in GitHub (tap this text) and help us improve. All the tools and libraries use in this project are free, not all the icons shown in this section are provided from the corresponding project, in some we just take a picture and create an icon to use here :)</string>
    <string name="project_github">https://github.com/CamiloDelReal/project-todo-x</string>
    <string name="libraries_and_tools">Libraries and Tools</string>
    <string name="android_jetpack">Android Jetpack</string>
    <string name="android_jetpack_url">https://developer.android.com/jetpack</string>
    <string name="android_kotlin">Android Kotlin</string>
    <string name="android_kotlin_url">https://developer.android.com/kotlin</string>
    <string name="timber">Timber</string>
    <string name="timber_url">https://github.com/JakeWharton/timber</string>
    <string name="dexter">Dexter</string>
    <string name="dexter_url">https://github.com/Karumi/Dexter</string>
    <string name="toasty">Toasty</string>
    <string name="toasty_url">https://github.com/GrenderG/Toasty</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="unclassified">Unclassified</string>
    <string name="groceries">Groceries</string>
    <string name="work">Work</string>
    <string name="sport">Sport</string>
    <string name="family">Family</string>
    <string name="friends">Friends</string>
    <string name="error_creating_default_categories">Error creating default categories</string>
    <string name="empty_field">Empty field</string>
    <string name="error_inserting_task_in_db">Error inserting task in database</string>
    <string name="error_updating_task_in_db">Error updating task in database</string>
    <string name="error_deleting_task_from_db">Error deleting task from database</string>
    <string name="error_deleting_tasks_from_db">Error deleting tasks from database</string>
    <string name="error_inserting_category_in_db">Error inserting category in database</string>
    <string name="error_updating_category_in_db">Error updating category in database</string>
    <string name="error_deleting_category_from_db">Error deleting category from database</string>
    <string name="important">Important</string>
    <string name="not_important">Not important</string>
    <string name="completed">Completed</string>
    <string name="scheduled">Scheduled</string>
    <string name="no_items">No items</string>
    <string name="unspecified_time">Unspecified time</string>
    <string name="no_date">No date</string>
    <string name="edit">Edit</string>
    <string name="complete_all">Complete all</string>
    <string name="no_tasks">No tasks yet</string>
    <string name="all">All</string>
    <string name="categories">Categories</string>
    <plurals name="task_count">
        <item quantity="one">%d task</item>
        <item quantity="other">%d tasks</item>
    </plurals>
    <plurals name="today_task_count">
        <item quantity="one">%d task for today</item>
        <item quantity="other">%d tasks for today</item>
    </plurals>
    <string name="no_categories">No categories yet</string>
    <string name="remaining">%d remaining</string>
    <string name="colors">Colors</string>
    <string name="flatuicolors_url">https://flatuicolors.com/</string>
    <string name="flatuicolors">Flat UI Colors 2</string>
    <string name="create_task">Create Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="create_category">Create Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="color">Color</string>
    <string name="pick_color">Pick color</string>
    <string name="marked_as">Marked as</string>
    <string name="task_details">Task details</string>
    <string name="time">Time</string>
    <string name="back">Back</string>
    <string name="error_saving_category_in_db">Error saving category in database</string>
    <string name="error_updating_item_in_db">Error updating item in database</string>
    <string name="delete">Delete</string>
    <string name="complete">Complete</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="alert">Alert</string>
    <string name="unclassified_cannot_be_deleted">This is a special category, cannot be deleted</string>
    <string name="confirm_delete_task">You are about to delete this task, are you sure to continue?</string>
    <string name="confirm_delete_category">You are about to delete this category, are you sure to continue?</string>
    <string name="confirm_delete_all_tasks_in_category">You are about to delete all the tasks in this category, are you sure to continue?</string>
    <string name="delete_all">Delete all</string>
    <string name="close">Close</string>
    <string name="delete_all_tasks">Delete all tasks</string>
    <string name="move_to_unclassified">Uncheck to move all the tasks to Unclassified category</string>
    <string name="cannot_edit_name">This is a special category, name cannot be edited.</string>
    <string name="add_tasks">Add tasks</string>
    <string name="task_deleted_successfully">Task deleted successfully</string>
    <string name="category_deleted_successfully">Category deleted successfully</string>
    <string name="category_saved">Category saved</string>
    <string name="task_saved">Task saved</string>
    <string name="edit_items">Edit items</string>
    <string name="items">Items</string>
    <string name="add_items">Add items</string>
    <string name="error_reading_items_from_db">Error reading items from database</string>
    <string name="error_saving_items_in_db">Error saving items in databse</string>
    <string name="items_saved">Items saved</string>
    <string name="uncomplete">Uncomplete</string>
    <string name="complete_alert_message">All items were marked as completed, task will be complete as well.</string>
    <string name="uncomplete_alert_message">All items are not completed, the task will also be uncompleted.</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thurday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="whatif">WhatIf</string>
    <string name="whatif_url">https://github.com/skydoves/WhatIf</string>
    <string name="drawabletoolbox">DrawableToolbox</string>
    <string name="drawabletoolbox_url">https://github.com/duanhong169/DrawableToolbox</string>
    <string name="circularprogressbar">CircularProgressBar</string>
    <string name="circularprogressbar_url">https://github.com/lopspower/CircularProgressBar</string>
    <string name="materialprogressbar">MaterialProgressBar</string>
    <string name="materialprogressbar_url">https://github.com/zhanghai/MaterialProgressBar</string>
    <string name="swipelayout">Swipe Layout</string>
    <string name="swipelayout_url">https://github.com/rambler-digital-solutions/swipe-layout-android</string>
    <string name="calendarview">CalendarView</string>
    <string name="calendarview_url">https://github.com/kizitonwose/CalendarView</string>
    <string name="flowlayout">FlowLayout</string>
    <string name="flowlayout_url">https://github.com/nex3z/FlowLayout</string>
    <string name="unknown_error">Unknown error</string>
    <string name="open">Open</string>
    <string name="details">Details</string>
    <string name="tasks_for">Tasks for</string>
</resources>
