<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.fragments.AboutFragment">

    <data>

        <variable
            name="version"
            type="java.lang.String" />

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:fitsSystemWindows="true"
        app:layoutDescription="@xml/scene_about">

        <View
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="@dimen/about_toolbar_height_expanded" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_centerInParent="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_left"
            android:tint="?attr/colorOnSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="@dimen/about_icon_size"
            android:layout_height="@dimen/about_icon_size"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher_rounded_corners" />

        <TextView
            android:id="@+id/txvAppName"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/app_name"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/txvVersion"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@{version}"
            android:textColor="?attr/colorOnSurface"
            tools:text="0.1.0" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/aboutContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/about_padding">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btnAboutLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/item_corner_radius"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="false"
                    app:contentPadding="@dimen/about_header_content_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:justificationMode="inter_word"
                            android:text="@string/about_description_1"
                            tools:targetApi="o" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/about_content_space" />

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:justificationMode="inter_word"
                            android:text="@string/about_description_2"
                            tools:targetApi="o" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/about_content_space" />

                        <TextView
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:justificationMode="inter_word"
                            android:text="@string/project_github"
                            tools:targetApi="o" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_header_space" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fonts" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.1"
                    android:background="?attr/colorOnSurface" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_section_header_space" />

                <org.xapps.apps.todox.views.custom.AboutReference
                    android:id="@+id/btnLinkGoogleFonts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_icon="@drawable/ic_googlefonts"
                    app:ar_link="@string/poppins_url"
                    app:ar_text="@string/poppins" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/about_section_space" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/icons" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.1"
                    android:background="?attr/colorOnSurface" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_section_header_space" />

                <org.xapps.apps.todox.views.custom.AboutReference
                    android:id="@+id/btnLinkMaterialDesignIcons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_icon="@drawable/ic_googlematerialdesign"
                    app:ar_link="@string/material_design_icons_url"
                    app:ar_text="@string/material_design_icons" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/about_section_space" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/colors" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.1"
                    android:background="?attr/colorOnSurface" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_section_header_space" />

                <org.xapps.apps.todox.views.custom.AboutReference
                    android:id="@+id/btnLinkFlatUIColors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_icon="@drawable/ic_flatuicolors"
                    app:ar_link="@string/flatuicolors_url"
                    app:ar_text="@string/flatuicolors" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/about_section_space" />

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/libraries_and_tools" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.1"
                    android:background="?attr/colorOnSurface" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_section_header_space" />

                <org.xapps.apps.todox.views.custom.AboutReference
                    android:id="@+id/btnLinkAndroidJetpack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_icon="@drawable/ic_androidjetpack"
                    app:ar_link="@string/android_jetpack_url"
                    app:ar_text="@string/android_jetpack" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_section_item_space" />

                <org.xapps.apps.todox.views.custom.AboutReference
                    android:id="@+id/btnLinkAndroidKotlin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_icon="@drawable/ic_androidkotlin"
                    app:ar_link="@string/android_kotlin_url"
                    app:ar_text="@string/android_kotlin" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_section_item_space" />

                <org.xapps.apps.todox.views.custom.AboutReference
                    android:id="@+id/btnLinkDexterPermissions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_icon="@drawable/ic_dexter"
                    app:ar_link="@string/dexter_url"
                    app:ar_text="@string/dexter" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_section_item_space" />

                <org.xapps.apps.todox.views.custom.AboutReference
                    android:id="@+id/btnLinkDrawableToolbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_link="@string/drawabletoolbox_url"
                    app:ar_text="@string/drawabletoolbox" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_section_item_space" />

                <org.xapps.apps.todox.views.custom.AboutReference
                    android:id="@+id/btnLinkCircularProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_link="@string/circularprogressbar_url"
                    app:ar_text="@string/circularprogressbar" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_section_item_space" />

                <org.xapps.apps.todox.views.custom.AboutReference
                    android:id="@+id/btnLinkMaterialProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_icon="@drawable/ic_materialprogressbar"
                    app:ar_link="@string/materialprogressbar_url"
                    app:ar_text="@string/materialprogressbar" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_section_item_space" />

                <org.xapps.apps.todox.views.custom.AboutReference
                    android:id="@+id/btnLinkSwipeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_link="@string/swipelayout_url"
                    app:ar_text="@string/swipelayout" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_section_item_space" />

                <org.xapps.apps.todox.views.custom.AboutReference
                    android:id="@+id/btnLinkCalendarView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_link="@string/calendarview_url"
                    app:ar_text="@string/calendarview" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_section_item_space" />

                <org.xapps.apps.todox.views.custom.AboutReference
                    android:id="@+id/btnLinkWhatIf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_link="@string/whatif_url"
                    app:ar_text="@string/whatif" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_section_item_space" />

                <org.xapps.apps.todox.views.custom.AboutReference
                    android:id="@+id/btnLinkToasty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_icon="@drawable/ic_toasty"
                    app:ar_link="@string/toasty_url"
                    app:ar_text="@string/toasty" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/about_section_item_space" />

                <org.xapps.apps.todox.views.custom.AboutReference
                    android:id="@+id/btnLinkTimber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ar_link="@string/timber_url"
                    app:ar_text="@string/timber" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>