<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.popups.ConfirmDeleteCategoryPopup">

    <FrameLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@android:color/black">

            <LinearLayout
                android:layout_width="@dimen/popup_message_options_width"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_bg_popup"
                android:orientation="vertical"
                android:padding="@dimen/content_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/txvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alert"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

                <TextView
                    android:id="@+id/txvMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_delete_category"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/content_padding_small" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/chxDeleteTasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="0dp"
                    android:minHeight="0dp"
                    android:checked="true"
                    android:text="@string/delete_all_tasks" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/move_to_unclassified"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/content_padding" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="end">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnNo"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnYes"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>